--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&display=swap');
+
 :root {
   --color-text: #EADADA;
   --gradient-background: linear-gradient(160deg, #242328 -20%, #0a090f 90%);
+
+  //Screen constants
+  --xs-max: 480px;  //Max for phones
+  --sm-max: 780px;  //Max for Tabs or halfscreen
+  --md-max: 1080px; //Max for FullHD
 }
 
 *,
@@ -11,6 +18,7 @@
 }
 
 body {
+  font-family: Nunito;
   color: var(--color-text);
   background: var(--gradient-background);
   transition: background-color 0.5s;
