--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&display=swap');
 
 :root {
-  --color-text: #EADADA;
+  --text-main-color: #EADADA;
+  --text-secondary-color: #BABABA;
+  --text-shadow: 0 0 0.4em #000000;
   --gradient-background: linear-gradient(160deg, #242328 -20%, #0a090f 90%);
 
   --dashboard-width: 13rem;
@@ -15,10 +17,9 @@
 }
 
 body {
-  font-family: Nunito;
-  color: var(--color-text);
+  font-family: Oswald;
+  color: var(--text-color);
   background: var(--gradient-background);
-  transition: background-color 0.5s;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -29,4 +30,20 @@ body {
   padding: 1rem;
   border: .1rem solid #ffffff07;
   border-radius: 1rem;
+}
+
+h1{
+  font-weight: 700;
+}
+
+h2{
+  font-weight: 500;
+}
+
+h3{
+  font-weight: 400;
+}
+
+.SecondaryText{
+  color: var(--text-secondary-color);
 }
